...
                            <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="iG8-tm-F0w">
                                <rect key="frame" x="5" y="69" width="365" height="30"/>
                                <subviews>
                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="wPT-UP-cal">
                                        <rect key="frame" x="0.0" y="0.0" width="139" height="31"/>
                                        <segments>
                                            <segment title="Bookmarks"/>
                                            <segment title="Knowns"/>
                                        </segments>
                                        <connections>
                                            <action selector="segmentedAct:" destination="BYZ-38-t0r" eventType="valueChanged" id="CTs-e3-LNJ"/>
                                        </connections>
                                    </segmentedControl>
...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="iG8-tm-F0w" secondAttribute="trailing" constant="5" id="tub-0j-a4d"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" id="YQ8-4o-gnR">
                        <leftBarButtonItems>
                            <barButtonItem title="Item" image="icons8-help-50" id="xaE-vL-JRX">
                                <connections>
                                    <segue destination="0QM-Md-kMK" kind="show" id="vT9-69-Dpq"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="Item" image="icons8-settings-50" id="2E8-0B-ael">
                                <connections>
...
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6DI-IL-sy1">
                                        <rect key="frame" x="10" y="137.5" width="315" height="46.5"/>
                                        <color key="backgroundColor" red="0.37671978690000002" green="1" blue="0.60104460920000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" title="Add to Bookmarks"/>
                                        <connections>
                                            <action selector="addToBookmarkedAct:" destination="Yna-8B-PjW" eventType="touchUpInside" id="iT3-P9-S9K"/>
                                        </connections>
                                    </button>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KSx-XL-8uc">
                                        <rect key="frame" x="17" y="54" width="301.5" height="77.5"/>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ek9-7i-7Dj">
                                        <rect key="frame" x="0.0" y="30.5" width="250" height="29"/>
                                        <segments>
                                            <segment title="Metric"/>
                                            <segment title="Imperial"/>
                                        </segments>
                                        <connections>
                                            <action selector="unitsSegAct:" destination="8mv-87-twt" eventType="valueChanged" id="k9r-Ep-37y"/>
                                        </connections>
                                    </segmentedControl>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Search Type :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OKb-4e-X4c">
...
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Jkg-NE-1zi">
                                        <rect key="frame" x="0.0" y="99" width="250" height="29"/>
                                        <segments>
                                            <segment title="Case InSensitive"/>
                                            <segment title="Case Sensitive"/>
                                        </segments>
                                        <connections>
                                            <action selector="searchSegAct:" destination="8mv-87-twt" eventType="valueChanged" id="bqt-ut-bNP"/>
                                        </connections>
                                    </segmentedControl>
...
