...
        collectionSource = settingsMem.checkSettingsStat(keyName: "collectionSource", newKeyValue: collectionSource)
        unitsInit = settingsMem.checkSettingsStat(keyName: "unitsInit", newKeyValue: unitsInit)
        updateUnitsSegmentedControl(selectedSeg: unitsInit)
        seacrhMethod = settingsMem.checkSettingsStat(keyName: "seacrhMethod", newKeyValue: seacrhMethod)
        updateSearchSegmentedControl(selectedSeg: seacrhMethod)
        
        navigationItem.title = "Settings page"
        
        resetKnowns.customizeDelete()
        resetBookmarks.customizeDelete()
        
        // fetch data to arrays
        bookmarkedArray = bookmarkedTools.fetchData()
...
