...
    

    func navigationMaker()  {
        let nav = self.navigationController?.navigationBar
        nav?.barStyle = UIBarStyle.black
        nav?.tintColor = UIColor.yellow
        navigationItem.title = "Weather Assistant"
    }
    
} //end of ViewController



...
